--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "typescript": "^5.1.6",
     "vite": "^4.4.0"
