--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,21 @@
   "description": "Organick-shop_Server",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "arsenij.arxipov.1998@gmail.com",
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mysql2": "^3.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
