--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^1.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.15.0"
@@ -18,6 +19,7 @@
 		"@types/node": "^20.4.2",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
+		"@types/react-slick": "^0.23.10",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "^6.4.0",
 		"@vitejs/plugin-react": "^4.0.1",
@@ -26,7 +28,9 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.1",
 		"react-refresh": "^0.14.0",
+		"react-slick": "^0.29.0",
 		"sass": "^1.63.6",
+		"slick-carousel": "^1.8.1",
 		"typescript": "^5.1.6",
 		"vite": "^4.4.0"
 	},
