--- a/client/package.json
+++ b/client/package.json
@@ -27,12 +27,14 @@
 		"eslint": "^8.44.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.1",
+		"formik": "^2.4.3",
 		"react-refresh": "^0.14.0",
 		"react-slick": "^0.29.0",
 		"sass": "^1.63.6",
 		"slick-carousel": "^1.8.1",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.0"
+		"vite": "^4.4.0",
+		"yup": "^1.2.0"
 	},
 	"browserslist": [
 		"last 2 version",
